# Difference-calculator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  difference.py  engine.py  formatter.py  gendiff.py  gendiff_func.py  parser.py
gendiff/formats/: plain.py  stylish.py  to_json.py
gendiff/scripts/: gendiff.py  gendiff_script.py  generate_diff.py
gendiff/test/: __init__.py  test_gendiff.py
gendiff1/: gendiff_func.py
gendiff1/test/: test_gendiff.py
test/: test_gendiff.py  test_generate_diff.py
test/fixtures/: answer_flat.txt  answer_tree.txt  answer_tree_json.txt  answer_tree_plain.txt  file1.json  tree_file1.yaml  tree_file2.json
